fix late check in cant not set deduction per minute, add defualt setting to saraly advance

--- a/custom/dev/ohrms_salary_advance/views/salary_advance_views.xml
+++ b/custom/dev/ohrms_salary_advance/views/salary_advance_views.xml
@@ -83,6 +83,11 @@
         <field name="model">salary.advance</field>
         <field name="arch" type="xml">
             <tree string="Salary Advance">
+                <header>
+                    <button name="approve_all_records" string="Approve"
+                            type="object" class="btn-primary"
+                            groups="hr.group_hr_manager"/>
+                </header>
                 <field name="employee_id"/>
                 <field name="date"/>
                 <field name="advance"/>
