--- a/custom/dev/gamification_value/views/gamification_goal_views.xml
+++ b/custom/dev/gamification_value/views/gamification_goal_views.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <!-- Contract View -->
-    <record id="goal_form_view" model="ir.ui.view">
-        <field name="name">goal.form.view.inherit</field>
-        <field name="model">gamification.goal</field>
-        <field name="inherit_id" ref="gamification.goal_form_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='definition_id']" position="after">
-                <field name="code"/>
-            </xpath>
-        </field>
-    </record>
+<!--    <record id="goal_form_view" model="ir.ui.view">-->
+<!--        <field name="name">goal.form.view.inherit</field>-->
+<!--        <field name="model">gamification.goal</field>-->
+<!--        <field name="inherit_id" ref="gamification.goal_form_view"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//field[@name='definition_id']" position="after">-->
+<!--                <field name="code"/>-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
 
-     <record id="goal_kanban_view" model="ir.ui.view">
-        <field name="name">goal.kanban.view.inherit</field>
-        <field name="model">gamification.goal</field>
-        <field name="inherit_id" ref="gamification.goal_kanban_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//t[@t-name='kanban-box']//p[strong/h4/field[@name='definition_id']]" position="after">
-                <p><strong><span>Goal Code: </span><field name="code" /></strong></p>
-            </xpath>
-        </field>
-    </record>
+<!--     <record id="goal_kanban_view" model="ir.ui.view">-->
+<!--        <field name="name">goal.kanban.view.inherit</field>-->
+<!--        <field name="model">gamification.goal</field>-->
+<!--        <field name="inherit_id" ref="gamification.goal_kanban_view"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//t[@t-name='kanban-box']//p[strong/h4/field[@name='definition_id']]" position="after">-->
+<!--                <p><strong><span>Goal Code: </span><field name="code" /></strong></p>-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
 </odoo>
 
 
