--- a/custom/dev/gamification_value/views/gamification_menu.xml
+++ b/custom/dev/gamification_value/views/gamification_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
      <record id="gamification_action" model="ir.actions.act_window">
-        <field name="name">Gamification Values</field>
+        <field name="name">Set Goal Value</field>
         <field name="res_model">gamification.value</field>
-        <field name="view_mode">tree,kanban,form</field>
-        <field name="view_id" ref="view_gamification_value_tree"/>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="view_id" ref="view_gamification_value_kanban"/>
     </record>
 
     <menuitem id="gamification_main_menu" name="Gamification" sequence="1"/>
