--- a/custom/dev/gamification_value/views/gamification_menu.xml
+++ b/custom/dev/gamification_value/views/gamification_menu.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-     <record id="gamification_action" model="ir.actions.act_window">
+<!--     <record id="gamification_action" model="ir.actions.act_window">-->
+<!--        <field name="name">Set Goal Value</field>-->
+<!--        <field name="res_model">gamification.value</field>-->
+<!--        <field name="view_mode">kanban,tree,form</field>-->
+<!--        <field name="view_id" ref="view_gamification_value_tree"/>-->
+<!--         <field name="context">-->
+<!--            {"search_default_group_by_parent_department_id": 1, "search_default_group_by_department_id": 1}-->
+<!--        </field>-->
+<!--    </record>-->
+    <record id="gamification_action" model="ir.actions.act_window">
         <field name="name">Set Goal Value</field>
         <field name="res_model">gamification.value</field>
         <field name="view_mode">kanban,tree,form</field>
-        <field name="view_id" ref="view_gamification_value_kanban"/>
+        <field name="view_id" ref="view_gamification_value_tree"/>
+        <field name="search_view_id" ref="gamification_value_search_view"/>
+        <field name="context">
+            {"search_default_group_by_parent_department_id": 1, "search_default_group_by_department_id": 1}
+        </field>
     </record>
 
     <menuitem id="gamification_main_menu" name="Gamification" sequence="1"/>
