--- a/custom/dev/hr_payroll_commission/report/report_compayslip_details_templates.xml
+++ b/custom/dev/hr_payroll_commission/report/report_compayslip_details_templates.xml
@@ -6,46 +6,46 @@
             <t t-foreach="docs" t-as="o">
                 <t t-call="web.external_layout">
                     <div class="page">
-                        <h2>Pay Slip</h2>
+                        <h2 style="font-size: 25px;">Com PaySlip(ข้อมูลค่าคอมมิสชั่น)</h2>
                         <p t-field="o.name"/>
                         <table class="table table-sm table-bordered">
                             <tr>
                                 <td>
-                                    <strong>Name</strong>
+                                    <strong>Name(ชื่อ-สกุล)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id"/>
                                 </td>
                                 <td>
-                                    <strong>Designation</strong>
+                                    <strong>Designation(ตำแหน่ง)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id.job_id"/>
                                 </td>
                             </tr>
+<!--                            <tr>-->
+<!--                                <td>-->
+<!--                                    <strong>Email</strong>-->
+<!--                                </td>-->
+<!--                                <td>-->
+<!--                                    <span t-field="o.employee_id.work_email"/>-->
+<!--                                </td>-->
+<!--                                <td>-->
+<!--                                    <strong>Identification No</strong>-->
+<!--                                </td>-->
+<!--                                <td>-->
+<!--                                    <span t-field="o.employee_id.identification_id"/>-->
+<!--                                </td>-->
+<!--                            </tr>-->
                             <tr>
                                 <td>
-                                    <strong>Email</strong>
-                                </td>
-                                <td>
-                                    <span t-field="o.employee_id.work_email"/>
-                                </td>
-                                <td>
-                                    <strong>Identification No</strong>
-                                </td>
-                                <td>
-                                    <span t-field="o.employee_id.identification_id"/>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <strong>Reference</strong>
+                                    <strong>Reference(เลขที่สลิป)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.number"/>
                                 </td>
                                 <td>
-                                    <strong>Bank Account</strong>
+                                    <strong>Bank Account(เลขบัญชีธนาคาร)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.employee_id.bank_account_id"/>
@@ -53,13 +53,13 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <strong>Date From</strong>
+                                    <strong>Date From(ตั้งแต่วันที่)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.date_from"/>
                                 </td>
                                 <td>
-                                    <strong>Date To</strong>
+                                    <strong>Date To(ถึงวันที่)</strong>
                                 </td>
                                 <td>
                                     <span t-field="o.date_to"/>
@@ -87,6 +87,66 @@
                                     </td>
                                     <td class="text-right">
                                         <span t-esc="h['total']"
+                                              t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <h3 style="font-size: 20px; margin-bottom: 10px; margin-top: 15px;"> <!-- Adjust -10px as needed -->
+                             Skills Assessment (ประเมินศักยภาพ)
+                        </h3>
+                        <table class="table table-sm" style="margin-top: -10px;"> <!-- Adjust -10px as needed -->
+                            <thead>
+                                <tr>
+                                    <th>Name (ชื่อ)</th>
+                                    <th>Code (รหัส)</th>
+                                    <th>Amount (จำนวน)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr t-foreach="o.employee_skill_line_ids" t-as="skill">
+                                    <td>
+                                        <span t-esc="skill.skill_id"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="skill.code"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-esc="skill.level_progress"
+                                              t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <h3 style="font-size: 20px; margin-bottom: 10px; margin-top: 15px;"> <!-- Adjust -10px as needed -->
+                            Goal (เป้าหมาย)
+                        </h3>
+                        <table class="table table-sm" style="margin-top: -10px;"> <!-- Adjust -10px as needed -->
+                            <thead>
+                                <tr>
+                                    <th>Name (ชื่อ)</th>
+                                    <th>Code (รหัส)</th>
+                                    <th>Target Goal (เป้าหมาย)</th>
+                                    <th>Current (ทำได้)</th>
+                                    <th>Completeness (% บรรลุ)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr t-foreach="o.goal_line_ids" t-as="goal">
+                                    <td>
+                                        <span t-esc="goal.definition_id"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="goal.code"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="goal.target_goal"/>
+                                    </td>
+                                    <td>
+                                        <span t-esc="goal.current"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <span t-esc="goal.completeness"
                                               t-esc-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/>
                                     </td>
                                 </tr>
