employee_late_checkin: update late.checkin.slot, fix bug attendance day work not store, hr.employee.updation: update hr.employee to When working hours change on employee, apply it to the contract, ohrms.saraly.advance: fix menu name, product.multi.uom: add the module

--- a/custom/dev/employee_late_check_in/views/late_check_in_views.xml
+++ b/custom/dev/employee_late_check_in/views/late_check_in_views.xml
@@ -91,10 +91,15 @@
         <field name="view_mode">tree,form</field>
         <field name="context">{'search_default_group_employee': 1}</field>
     </record>
+
     <!-- MenuItems -->
     <menuitem id="menu_late_check_in" name="Late Check-in"
               parent="hr_attendance.menu_hr_attendance_root"
               action="late_check_in_action"
               sequence="21"
               groups="hr.group_hr_user"/>
+    <menuitem id="menu_late_check_in_config" name="Check-in Slots"
+              parent="menu_late_check_in"
+              action="action_late_check_in_slot"
+              sequence="21"/>
 </odoo>
