--- a/custom/dev/hr_zk_attendance/views/hr_attendance_view.xml
+++ b/custom/dev/hr_zk_attendance/views/hr_attendance_view.xml
@@ -11,16 +11,32 @@
             </xpath>
         </field>
     </record>
-
     <record id="view_attendance_tree_inherit" model="ir.ui.view">
         <field name="name">hr.attendance.tree.inherit</field>
         <field name="model">hr.attendance</field>
         <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>
         <field name="arch" type="xml">
             <xpath expr="//tree/field[@name='employee_id']" position="after">
-                <field name="is_bio_device"/>
+                <field name="alert_flag"/>
+<!--                <field name="is_bio_device"/>-->
+                <field name="created_by_user"/>
                 <field name="edit_source"/>
             </xpath>
         </field>
     </record>
+
+
+<!--    <record id="view_attendance_tree_inherit" model="ir.ui.view">-->
+<!--        <field name="name">hr.attendance.tree.inherit</field>-->
+<!--        <field name="model">hr.attendance</field>-->
+<!--        <field name="inherit_id" ref="hr_attendance.view_attendance_tree"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//tree/field[@name='employee_id']" position="after">-->
+<!--                <field name="is_bio_device"/>-->
+<!--                <field name="edit_source"/>-->
+<!--                <field name="alert_flag" group_operator="max"/>-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
+
 </odoo>
