--- a/custom/dev/hr_payroll_community/report/report_payslip_details_templates.xml
+++ b/custom/dev/hr_payroll_community/report/report_payslip_details_templates.xml
@@ -207,7 +207,7 @@
                                 </table>
                             </div>
                         </div>
-                        <h3 style="font-size: 20px;">  </h3>
+                        <h3 style="font-size: 20px;"> Working Day Summary(สรุปวันทำงาน) </h3>
                         <div class="row">
                             <div class="col-6">
                                 <table class="table table-sm mb32">
