employee_late_check_in:modify salary_rule.xml, hr_insurance - hr_resignation:modify salary_rule.xml fix bug return insurance fixbug resignation, hr_payroll_commission: modify salary to match used

--- a/custom/dev/hr_insurance/views/employee_insurance_views.xml
+++ b/custom/dev/hr_insurance/views/employee_insurance_views.xml
@@ -8,7 +8,7 @@
             <form string="Employee Insurance">
                 <header>
                     <field name="state" widget="statusbar"
-                           statusbar_visible="active,expired,resignation_confirm"/>
+                           statusbar_visible="active,expired"/>
                 </header>
                 <sheet>
                     <group>
