--- a/custom/dev/hr_employee_updation/views/hr_employee_views.xml
+++ b/custom/dev/hr_employee_updation/views/hr_employee_views.xml
@@ -70,7 +70,7 @@
                             </p>
                         </div>
                     </div>
-                    <field name="badge_ids" widget="many2many_kanban"/>
+                    <field name="badge_ids" mode="kanban"/>
                 </page>
             </xpath>
         </field>
