--- a/custom/dev/project_gamification/views/project_task_views.xml
+++ b/custom/dev/project_gamification/views/project_task_views.xml
@@ -7,6 +7,9 @@
     <field name="inherit_id" ref="project.view_task_form2"/>
     <field name="arch" type="xml">
       <!-- Insert after priority (safe anchor in your form) -->
+<!--      <xpath expr="//form/header/field[@name='stage_id']" position="replace" >-->
+<!--          <field name="stage_id" invisible="1"/>-->
+<!--      </xpath>-->
       <xpath expr="//label[@for='repeat_interval']/following-sibling::div[1]" position="after">
         <field name="importance_type_id"
                domain="[('active','=',True)]"
@@ -43,6 +46,26 @@
     </field>
   </record>
 
+  <record id="view_task_search_stage_inherit" model="ir.ui.view">
+    <field name="name">project.task.search.stage.inherit</field>
+    <field name="model">project.task</field>
+    <field name="inherit_id" ref="project.view_task_search_form"/>
+    <field name="arch" type="xml">
+      <xpath expr="//search" position="inside">
+        <filter string="Has Stage"
+                name="has_stage"
+                domain="[('stage_id','!=',False)]"/>
+      </xpath>
+    </field>
+  </record>
+
+
+  <record id="project.act_project_project_2_project_task_all" model="ir.actions.act_window">
+     <field name="domain">[('project_id', '=', active_id), ('display_in_project', '=', True)]</field>
+     <field name="context">{'default_project_id': active_id, 'show_project_update': True, 'search_default_has_stage': 1, 'search_default_open_tasks': 1}</field>
+  </record>
+
+
   <record id="task_kanban_add_field" model="ir.ui.view">
     <field name="name">project.task.kanban.add.importance.field</field>
     <field name="model">project.task</field>
@@ -56,22 +79,33 @@
     </field>
   </record>
 
-  <record id="task_kanban_show_importance_after_priority" model="ir.ui.view">
-      <field name="name">project.task.kanban.show.importance.after.priority</field>
-      <field name="model">project.task</field>
-      <field name="inherit_id" ref="project.view_task_kanban"/>
-      <field name="arch" type="xml">
-        <!-- safer: put at end of bottom-left container -->
-        <xpath expr="//t[@t-name='kanban-box']//div[contains(@class,'oe_kanban_bottom_left')]" position="inside">
-          <t t-if="record.importance_type_id and record.importance_type_id.value">
-            <span t-attf-class="o_tag ms-1 o_tag_color_#{record.importance_color and record.importance_color.raw_value or 0}"
-                  t-att-title="record.importance_type_id.value"
-                  style="font-size:0.95rem;padding:0.2rem 0.6rem;font-weight:600;">
-              <t t-esc="record.importance_type_id.value"/>
-            </span>
-          </t>
-        </xpath>
-      </field>
-</record>
+      <record id="task_kanban_show_importance_after_priority" model="ir.ui.view">
+          <field name="name">project.task.kanban.show.importance.after.priority</field>
+          <field name="model">project.task</field>
+          <field name="inherit_id" ref="project.view_task_kanban"/>
+          <field name="arch" type="xml">
+            <!-- safer: put at end of bottom-left container -->
+            <xpath expr="//t[@t-name='kanban-box']//div[contains(@class,'oe_kanban_bottom_left')]" position="inside">
+              <t t-if="record.importance_type_id and record.importance_type_id.value">
+                <span t-attf-class="o_tag ms-1 o_tag_color_#{record.importance_color and record.importance_color.raw_value or 0}"
+                      t-att-title="record.importance_type_id.value"
+                      style="font-size:0.95rem;padding:0.2rem 0.6rem;font-weight:600;">
+                  <t t-esc="record.importance_type_id.value"/>
+                </span>
+              </t>
+            </xpath>
+          </field>
+    </record>
+
+<!--    <record id="view_task_form_manager" model="ir.ui.view">-->
+<!--            <field name="name">project.task.form.manager</field>-->
+<!--            <field name="model">project.task</field>-->
+<!--            <field name="inherit_id" ref="project.view_task_form2"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <xpath expr="//form/header/field[@name='stage_id']" position="attributes" groups="project.group_project_manager">-->
+<!--                    <attribute name="options">{'clickable': '0', 'fold_field': 'fold'}</attribute>-->
+<!--                </xpath>-->
+<!--            </field>-->
+<!--        </record>-->
 
 </odoo>
