--- a/custom/dev/project_gamification/views/project_task_views.xml
+++ b/custom/dev/project_gamification/views/project_task_views.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-  <!-- Add the single importance field to Task views -->
   <record id="view_task_form_importance_inherit" model="ir.ui.view">
     <field name="name">project.task.form.importance.single.inherit</field>
     <field name="model">project.task</field>
     <field name="inherit_id" ref="project.view_task_form2"/>
     <field name="arch" type="xml">
-      <!-- Insert after priority (safe anchor in your form) -->
-<!--      <xpath expr="//form/header/field[@name='stage_id']" position="replace" >-->
-<!--          <field name="stage_id" invisible="1"/>-->
-<!--      </xpath>-->
       <xpath expr="//label[@for='repeat_interval']/following-sibling::div[1]" position="after">
-        <field name="importance_type_id"
+            <field name="importance_type_id"
                domain="[('active','=',True)]"
                options="{'no_create': True, 'no_create_edit': True, 'no_open': True}"/>
+      </xpath>
+      <xpath expr="//group[field[@name='partner_id']]" position="after">
+          <group string="Cover Image">
+            <field name="displayed_image_id" widget="attachment_image"/>
+          </group>
+          <notebook>
+              <page string="Image Gallery" name="image_gallery">
+                   <group string="Image Gallery" col="1">
+                        <field name="attachment_ids"
+                               widget="image_gallery"
+                               nolabel="1"/>
+                    </group>
+              </page>
+          </notebook>
       </xpath>
     </field>
   </record>
@@ -23,7 +32,6 @@
     <field name="model">project.task</field>
     <field name="inherit_id" ref="project.view_task_tree2"/>
     <field name="arch" type="xml">
-      <!-- Add a column after name -->
       <xpath expr="//tree/field[@name='name']" position="after">
         <field name="importance_type_id"
                domain="[('active','=',True)]"
@@ -69,7 +77,6 @@
   <record id="task_kanban_add_field" model="ir.ui.view">
     <field name="name">project.task.kanban.add.importance.field</field>
     <field name="model">project.task</field>
-    <!-- Replace with your actual task kanban xmlid if different -->
     <field name="inherit_id" ref="project.view_task_kanban"/>
     <field name="arch" type="xml">
       <xpath expr="//kanban" position="inside">
@@ -79,33 +86,22 @@
     </field>
   </record>
 
-      <record id="task_kanban_show_importance_after_priority" model="ir.ui.view">
-          <field name="name">project.task.kanban.show.importance.after.priority</field>
-          <field name="model">project.task</field>
-          <field name="inherit_id" ref="project.view_task_kanban"/>
-          <field name="arch" type="xml">
-            <!-- safer: put at end of bottom-left container -->
-            <xpath expr="//t[@t-name='kanban-box']//div[contains(@class,'oe_kanban_bottom_left')]" position="inside">
-              <t t-if="record.importance_type_id and record.importance_type_id.value">
-                <span t-attf-class="o_tag ms-1 o_tag_color_#{record.importance_color and record.importance_color.raw_value or 0}"
-                      t-att-title="record.importance_type_id.value"
-                      style="font-size:0.95rem;padding:0.2rem 0.6rem;font-weight:600;">
-                  <t t-esc="record.importance_type_id.value"/>
-                </span>
-              </t>
-            </xpath>
-          </field>
-    </record>
 
-<!--    <record id="view_task_form_manager" model="ir.ui.view">-->
-<!--            <field name="name">project.task.form.manager</field>-->
-<!--            <field name="model">project.task</field>-->
-<!--            <field name="inherit_id" ref="project.view_task_form2"/>-->
-<!--            <field name="arch" type="xml">-->
-<!--                <xpath expr="//form/header/field[@name='stage_id']" position="attributes" groups="project.group_project_manager">-->
-<!--                    <attribute name="options">{'clickable': '0', 'fold_field': 'fold'}</attribute>-->
-<!--                </xpath>-->
-<!--            </field>-->
-<!--        </record>-->
+  <record id="task_kanban_show_importance_after_priority" model="ir.ui.view">
+      <field name="name">project.task.kanban.show.importance.after.priority</field>
+      <field name="model">project.task</field>
+      <field name="inherit_id" ref="project.view_task_kanban"/>
+      <field name="arch" type="xml">
+        <xpath expr="//t[@t-name='kanban-box']//div[contains(@class,'oe_kanban_bottom_left')]" position="inside">
+          <t t-if="record.importance_type_id and record.importance_type_id.value">
+            <span t-attf-class="o_tag ms-1 o_tag_color_#{record.importance_color and record.importance_color.raw_value or 0}"
+                  t-att-title="record.importance_type_id.value"
+                  style="font-size:0.95rem;padding:0.2rem 0.6rem;font-weight:600;">
+              <t t-esc="record.importance_type_id.value"/>
+            </span>
+          </t>
+        </xpath>
+      </field>
+  </record>
 
 </odoo>
